<resources>
    <string name="app_name">Deogeobilchi</string>
    <string name="korean_app_name">덕업일치</string>
    <string name="kakao_login">카카오 계정 로그인</string>
    <string name="naver_login">네이버 로그인</string>
    <string name="exam_title">청소년 직업 흥미 검사</string>
    <string name="exam_start">검사 시작하기</string>
    <string name="exam_what_is">청소년 직업 흥미 검사란?</string>
    <string name="exam_what_text_1">청소년들이 진로를 결정하고 직업 세계를 탐색하는데 도움을 줄 수 있도록 개인의 흥미에 대한 과학적인 분석과
다양한 직업세계에 대한 폭 넓은 정보를 제공하는 검사입니다.</string>
    <string name="exam_what_text_2">본 서비스에서는 이 검사를 바탕으로 이루어집니다.
    서비스를 이용하시려면 검사에 참여해주시길 바랍니다.</string>
    <string name="exam_source">이 검사는 워크넷 ‘청소년 직업 흥미 검사’를\n바탕으로 만들어졌습니다.</string>
    <string name="exam_answer_1">매우 그렇다</string>
    <string name="exam_answer_2">그렇다</string>
    <string name="exam_answer_3">보통이다</string>
    <string name="exam_answer_4">아니다</string>
    <string name="exam_answer_5">매우 아니다</string>
    <string name="finish_text">완료</string>
    <string name="exam_finish">검사 결과</string>
    <string name="goto_main">추천 기업 만나러 가기</string>
    <string name="exam_result">당신의 흥미유형 결과</string>
    <string name="recommend_job">직업 추천</string>
    <string name="feature">특징</string>
    <string name="prefer_activity">선호 직업활동</string>
    <string name="search_enterprise">기업 찾기</string>
    <string name="community">커뮤니티</string>
    <string name="mypage">내 정보</string>
    <string name="search_sentence">유형을 검색하세요.</string>
    <string name="apply">지원하기</string>
    <string name="summit">제출하기</string>
    <string name="scrap">스크랩</string>
    <string name="notice">[공지] 자유로운 대화를 나누어 보세요!</string>
</resources>
