<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="number"
            type="int" />
        <variable
            name="question"
            type="String" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/question_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_square_circle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/tv_question_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:textSize="22sp"
                    android:text="@{String.valueOf(number)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.4"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:id="@+id/tv_question_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{question}"
                    style="@style/Poppins.TitleStyle"
                    app:layout_constraintStart_toEndOf="@id/tv_question_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/GrayBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_title_layout"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_title_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:layout_marginStart="16dp"
                >
                <RadioButton
                    android:id="@+id/radio_btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_answer_1"
                    style="@style/Roboto.RadioStyle"
                    android:drawableStart="@drawable/radio_button_exam"
                    android:drawablePadding="16dp"
                    android:button="@null"
                    android:paddingVertical="6dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_answer_2"
                    style="@style/Roboto.RadioStyle"
                    android:drawableStart="@drawable/radio_button_exam"
                    android:drawablePadding="16dp"
                    android:button="@null"
                    android:paddingVertical="6dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_answer_3"
                    style="@style/Roboto.RadioStyle"
                    android:drawableStart="@drawable/radio_button_exam"
                    android:drawablePadding="16dp"
                    android:button="@null"
                    android:paddingVertical="6dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_answer_4"
                    style="@style/Roboto.RadioStyle"
                    android:drawableStart="@drawable/radio_button_exam"
                    android:drawablePadding="16dp"
                    android:button="@null"
                    android:paddingVertical="6dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_answer_5"
                    style="@style/Roboto.RadioStyle"
                    android:drawableStart="@drawable/radio_button_exam"
                    android:drawablePadding="16dp"
                    android:button="@null"
                    android:paddingVertical="6dp"
                    />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/prev_btn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_circle_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="36dp"
                >
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_arrow_left"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/after_btn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/background_circle_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="36dp"
                >
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
